finally solved dark mode issue by just adding another button

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -57,6 +57,7 @@ button {
 .main-button {
   margin-bottom: 40px;
   margin-top: 30px;
+  display: flex;
 }
 
 #generate-password {
@@ -79,4 +80,13 @@ button {
 
 .dull-text {
   color: white;
+}
+
+#light-mode {
+  background: #F8B400;
+}
+
+
+.left-side {
+  margin-left: auto;
 }
