--- a/styles/light.css
+++ b/styles/light.css
@@ -57,6 +57,7 @@ button {
 .main-button {
   margin-bottom: 40px;
   margin-top: 30px;
+  display: flex;
 }
 
 #generate-password {
@@ -71,12 +72,21 @@ button {
 
 #dark-mode {
   background: #FF6363;
+  margin-left: auto;
 }
 
-#dark-mode:hover {
-  background: #E8630A;
-}
+
 
 .dull-text {
   color: black;
+}
+
+
+#light-mode {
+  background: #F8B400;
+}
+
+
+.left-side {
+  margin-left: auto;
 }
